@@ -4,8 +4,10 @@ ags (0.7.40)
 	* fixed zero-length notes in ags_note_duplicate() and return NULL
 	* fixed negative-length notes in ags_note_duplicate() by swapping x values
 	* fixed encoding special char of strings in ags_turtle.c
+	* fixed AgsNotebook fixed width to resizeable
 	* improved regexp to read string literals in ags_turtle.c
 	* improved AgsLineMember and AgsBulkMember to escape their strings
+	* implemented resize of AgsNotebook previously it was fixed size
 
 ags (0.7.39)
 
